--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
-/*  your css code here. If applicable */
+body{
+	background-color:skyblue;
+}
+p:first-of-type{
+	background-color:black;
+	color:white
+}
+p:last-of-type{
+	color:red;
+}
+ul{
+	width:300px;
+}
+li:first-of-type{
+	background-color:white;
+}
+li:nth-of-type(3){
+	font-size:13px;
+	background-color:pink;
+}
+li:last-of-type{
+	background-color:white;
+}
+li:nth-of-type(even){
+  background-color:grey ;
+	font-size:14px;
+}
